force-app/main/default/objects/Text_Encrypted__c/Text_Encrypted__c.object-meta.xml
<CustomObject>
    <label>Text Encrypted</label>
    <nameField>
        <displayFormat>T-{00}</displayFormat>
        <label>#Text</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Text Enc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>