force-app/main/default/objects/Text_Encrypted__c/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>