force-app/main/default/objects/Text_Encrypted__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FirstName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>