force-app/main/default/objects/Text_Encrypted__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>