force-app/main/default/objects/Text_Encrypted__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>DuckDuckGo</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>