force-app/main/default/objects/Text_Encrypted__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <formula>IF( TEXT(Site__c)=&quot;Google&quot;,HYPERLINK(&quot;https://www.google.com&quot;,&quot;Google&quot;),IF( TEXT(Site__c)=&quot;Bing&quot;, HYPERLINK(&quot;https://www.bing.com&quot;,&quot;Bing&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website</label>
    <type>Text</type>
</CustomField>